fix: spacing (#95)
* feat: cleanup after generating html

* fix: rebase issue

* feat: removing raw css

* feat: adding image viewing mode

* fix: ignoring *_templ.go files

* fix: ignoring main bin and adding towebp-l

* fix: adding go.mod

* fix: big screw up, merged main into dev and it messed up everyting

* fix: workflow

* fix: fixing .gitignore on main branch

* fix: main.go

* fix: removing .air.toml from main

* fix: go.sum

* fix: fixing wide image width in changing screen

* fix: trying to fix nav on mobile

* fix: fixing nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* fix: nav on mobile

* feat: changing nav completely and accent color changes

* fix: something went wrong generating css on previous commit

* feat: fixing minor bugs

* fix: spacing

---------

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,11 +8,11 @@
     }
 
     h2 {
-        @apply text-2xl sm:text-4xl xl:text-5xl pb-2 sm:pb-4 xl:pb-6
+        @apply text-2xl sm:text-4xl xl:text-5xl pb-2 xl:pb-4
     }
 
     h3 {
-        @apply text-lg sm:text-2xl xl:text-3xl pb-[0.250rem] sm:pb-3 overflow-x-hidden
+        @apply text-lg sm:text-2xl xl:text-3xl pb-[0.25rem] sm:pb-2 overflow-x-hidden
     }
 
     h3::after {
